# tacos

./: .gitignore  CMakeLists.txt  README.md
collective/: AllGather.cpp  Collective.cpp
include/tacos/: Collective.h  Comm_op.h  HeteroMesh2D.h  Link_result.h  Logger.h  Logger.tpp  Npu_result.h  Synthesis_result.h  TacosGreedy.h  TacosNetwork.h  Xml_writer.h
include/tacos/synthesizer/: synthesizer.h  time_expanded_network.h
include/tacos/topology/: hetero_mesh_2d.h  hetero_mesh_3d.h  heteromesh_2d_switch.h  topology.h
include/tacos/writer/: comm_op.h  link_result.h  npu_result.h  synthesis_result.h  xml_transformer.h  xml_writer.h
logger/: logger.cpp
runner/: main.cpp
src/: CMakeLists.txt  main.cpp
src/synthesizer/: synthesizer.cpp  time_expanded_network.cpp
src/topology/: hetero_mesh_2d.cpp  hetero_mesh_3d.cpp  heteromesh_2d_switch.cpp  topology.cpp
src/writer/: comm_op.cpp  link_result.cpp  npu_result.cpp  synthesis_result.cpp  xml_transformer.cpp  xml_writer.cpp
synthesizer/: TacosGreedy.cpp
topology/: HeteroMesh2D.cpp  Torus2D.cpp  Torus3D.cpp
writer/: comm_op.cpp  link_result.cpp  npu_result.cpp  synthesis_result.cpp  xml_writer.cpp
